<resources>
    <string name="my_name">Dushyant Deshmukh</string>
    <string name="app_name">NUMAD14S-DushyantDeshmukh</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="about_label">About</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="gen_error_label">Generate Error</string>
    <string name="sudoku_label">Sudoku</string>
    <string name="dictionary_label">Dictionary</string>
    <string name="quit_label">Quit</string>
    <string name="about_text">\
Sample about text. Needs to be updated&#8230;</string>
    <string name="about_name">Name: Dushyant Deshmukh</string>
    <string name="about_email">Email: deshmukh.d@husky.neu.edu</string>
    <string name="about_school_year">Year: 2nd year MS</string>
    <string name="about_degree_prog">Program: MS in Computer Science</string>
    <string name="about_phone_unique_id_label">Unique ID of Phone</string>
    <string name="about_ok_label">OK</string>
    <string name="dictionary_title_label">Test Dictionary</string>
    <string name="dictionary_clear">Clear</string>
    <string name="dictionary_return">Return to Menu</string>
    <string name="dictionary_ack">Acknowledgements</string>
    <string name="dictionary_textbox_hint">Enter your word here&#8230;</string>
    <string name="dictionary_ack_title">Dictionary Acknowledgements</string>
    <string name="dictionary_ack_ok_label">OK</string>
    <string name="dictionary_acks"> 1. The valid word beep sound \'dictionary_beep.mp3\' has been downloaded from following online rersource:\r\n
        								http://soundbible.com/1682-Robot-Blip.html \r\n\r\n
        							2. The approach to use BloomFilter encoding to compress the wordlist and then perform a quick lookup was sugested to me by Zhongjie Mao. \r\n\r\n
									3. For my BloomFilter implementation, I have referred to Wikipedia and the following implementation on Github:\r\n
									   http://en.wikipedia.org/wiki/Bloom_filter\r\n
									   https://github.com/magnuss/java-bloomfilter\r\n
									   \r\n
									4. For the compressed file conversion to and from byte array, I referred to following online rersources:\r\n
									   http://www.exampledepot.8waytrips.com/egs/java.util/Bits2Array.html\r\n
									   http://stackoverflow.com/questions/6197411/converting-from-bitset-to-byte-array\r\n</string>
    <string name="wordgame_title_label">Word Game</string>
    <string name="wordgame_newgame">New Game</string>
    <string name="wordgame_continue">Continue</string>
    <string name="wordgame_settings">Settings</string>
    <string name="wordgame_settings_shortcut">s</string>
    <string name="wordgame_return">Return to Menu</string>
    <string name="wordgame_ack">Acknowledgements</string>
    <string name="wordgame_ack_ok_label">OK</string>
    <string name="wordgame_acks">1. The basic structure of this game is based on \'Letris 2\' game on Android.\r\n\r\n
        						2. Sudoku game in \'Hello Android\' book has been used as a reference for 2D graphics, storing state and other game settings.\r\n\r\n
        						3. The sounds \'button_press\', \'wordgame_bg_music\' and \'wordgame_menu_music\' used in the game are referenced from \'www.SoundJay.com\'.\r\n\r\n
        						4. The sounds \'count_down\', \'game_over_gong\', \'valid_word_beep\' and \'invalid_word_beep\' used in the gme are referenced from \'www.SoundBible.com\'.\r\n\r\n
        						5. Android tutorials from \'www.lynda.com\' were also very helpful for this assignment.\r\n</string>
    <string name="wordgame_instructions_title">How to Play</string>
    <string name="wordgame_instructions_ok_label">OK</string>
    <string name="wordgame_instructions">1. The game starts with the bottom row pre-populated with letters.\r\n\r\n
        								2. A new letter appears on the screen at regular time intervals depending on the difficulty level.\r\n\r\n
        								3. User has to click/tap on individual letters to form a word in that sequence, which is shown below the board of letters.\r\n\r\n
        								4. If the word formed by the user is valid, the word turns green. User should click/tap this word to confirm it.\r\n
        								    This will increase the score by that words length and the corresponding letters will disappear from the board.\r\n\r\n
        								5.If the word formed by the user is invalid, the word turns red. User should click/tap the \'Clear\' button to clear the selection of letters.\r\n\r\n
        								6. User needs to complete as many valid words as possible before the board is completely filled with letters.\r\n\r\n
        								7. The number of points earned for each valid word is equal to the length of that word. \r\n
        								    At the end of game, users can see their total score, longest word\'s length and accuracy.\r\n\r\n
        								8. User can change the difficulty level, no. of rows and no. of columns from the settings button shown on the menu screen.\r\n\r\n
        								9. User can pause or resume the game at any moment using the \'Pause\'/\'Resume\' button.\r\n\r\n
        								10. When the board is close to getting completely filled, users can hear a count down sound to notify them about the last few seconds remaining.\r\n</string>
    <string name="wordgame_hints_title">Hints</string>
    <string name="wordgame_hints_ok_label">OK</string>
    <string name="wordgame_hints">1. Never settle for one word. Almost every word on your game board can be added to. For example, the word AGE can be turned into AGED by adding a D. \r\n\r\n
        						2. It is worth waiting for a four letter scoring opportunity to come up rather than zooming through the level with three letter words and blitzing the objectives.\r\n\r\n
        						3. When time is running out, quickly complete as many 3 letter words as possible.\r\n</string>
    <string name="wordgame_clear">Clear</string>
    <string name="wordgame_pause">Pause</string>
    <string name="wordgame_resume">Resume Game</string>
    <string name="wordgame_hint">Hint</string>
    <string name="wordgame_quit">Quit</string>
    <string name="wordgame_currscore">Score: 0</string>
    <string name="wordgame_gameover_title">Game Over</string>
    <string name="wordgame_gameover_msg">You can do better ;-)</string>
    <string name="wordgame_gameover_score">Score: </string>
    <string name="wordgame_gameover_accuracy">Accuracy: </string>
    <string name="wordgame_gameover_longestword">Longest word: </string>
    <string name="wordgame_gameover_restart_label">RESTART</string>
    <string name="wordgame_gameover_quit_label">QUIT</string>
    <string name="pref_wordgame_rows_summary">No of rows on the board</string>
    <string name="pref_wordgame_rows">Rows</string>
    <string name="pref_wordgame_cols_summary">No of cols on the board</string>
    <string name="pref_wordgame_cols">Cols</string>
    <string name="pref_wordgame_difficulty_summary">Difficulty level of the game</string>
    <string name="pref_wordgame_difficulty">Difficulty</string>
    <string name="communication_title_label">Communication</string>
    <string name="communication_heading_label">Communication Tests</string>
    <string name="communication_storing_data">Storing Data on Cloud</string>
    <string name="communication_interphone_comm">Inter Phone Communication</string>
    <string name="communication_ack_label">Acknowledgements</string>
    <string name="communication_quit">Quit</string>
    <string name="communication_storing_data_title_label">Test Storing Data</string>
    <string name="communication_storing_data_msg">Enter key and value to store on cloud</string>
    <string name="communication_storing_data_key_hint">Enter key here&#8230;</string>
    <string name="communication_storing_data_value_hint">Enter value here&#8230;</string>
    <string name="communication_storing_data_save">Save</string>
    <string name="communication_storing_data_fetch">Fetch</string>
    <string name="communication_storing_data_clear">Clear</string>
    <string name="communication_storing_data_quit">Return to menu</string>
    <string name="communication_interphone_comm_title_label">Test Inter-phone Communication</string>
    <string name="communication_interphone_comm_username_hint">Enter username here&#8230;</string>
    <string name="communication_interphone_comm_startgame">Start Game</string>
    <string name="communication_interphone_comm_sendmsg_hint">Enter your message here&#8230;</string>
    <string name="communication_interphone_comm_sendmsg">Send Message</string>
    <string name="communication_interphone_comm_quit">Return to menu</string>
    <string name="communication_ack_ok_label">OK</string>
    <string name="communication_acks">Following is the list of online resources referred:\r\n \r\n
        1. Google Cloud Messaging (GCM) \r\n
        http://developer.android.com/google/gcm/index.html \r\n \r\n
        1. Making HTTP post call: \r\n
        http://www.mkyong.com/java/how-to-send-http-request-getpost-in-java/ \r\n \r\n
        2. Setting up a broadcast receiver: \r\n
        http://www.androidsnippets.com/how-to-set-up-a-broadcastreceiver-intent \r\n \r\n
        3. Checking if activity is currently active: \r\n
        http://androidblog.reindustries.com/check-if-an-android-activity-is-currently-running/ \r\n \r\n
        4. Intent flags while launching activity: \r\n
        http://blog.akquinet.de/2010/04/15/android-activites-and-tasks-series-intent-flags/ \r\n \r\n
        5. Checking if internet is available: \r\n
        http://stackoverflow.com/questions/8573176/internet-connection-error \r\n</string>
    <string name="two_player_wordgame_title_label">Two Player Word Game</string>
    <string name="two_player_wordgame_welcome_msg">Hello </string>
    <string name="two_player_wordgame_username_hint">Enter username&#8230;</string>
    <string name="two_player_wordgame_newgame">New Game</string>
    <string name="two_player_wordgame_continue">Continue</string>
    <string name="two_player_wordgame_top_scorers">Top Scorers</string>
    <string name="two_player_wordgame_pause">Pause</string>
    <string name="two_player_wordgame_quit">Quit</string>
    <string name="two_player_wordgame_currround">Round #</string>
    <string name="two_player_wordgame_time">Time: 0 sec(s)</string>
    <string name="two_player_wordgame_score">Score: 0</string>
    <string name="two_player_wordgame_player1">Player 1: </string>
    <string name="two_player_wordgame_player2">Player 2: </string>
    <string name="two_player_wordgame_p1_score">P1 score</string>
    <string name="two_player_wordgame_p2_score">P2 score</string>
    <string name="final_proj_name">Match Me If You Can</string>
    <string name="final_proj_capture_btn">Capture</string>
    <string name="final_proj_accept_btn">Save</string>
    <string name="final_proj_reject_btn">Discard</string>
    <string name="final_proj_match_btn">Match</string>
	<string name="final_proj_single_phone_mode">Single Phone Mode</string>
    <string name="final_proj_dual_phone_mode">Dual Phone Mode</string>
    <string name="final_proj_exit_game">Exit Game</string>
    <string name="final_proj_opponent_name_hint">Enter opponent username here&#8230;</string>
    <string name="final_proj_user_name_hint">Enter user username here&#8230;</string>
    <string name="final_proj_submit_user_name">Submit User Name</string>
    <string name="final_proj_find_opponent">Find Opponent</string>
    <string name="final_proj_skip_btn">Skip</string>
    <string name="final_proj_end_btn">End</string>
    <string name="final_proj_img_count_textview">Img Count: 0</string>
    <string name="final_proj_time_elapsed_textview"> 0 sec</string>
    <string name="final_proj_clear_btn">Clear</string>
    <string name="final_proj_end_practice_btn">End Practice</string>
    <string name="final_proj_back">Back</string>
</resources>