<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
      android:id="@+id/about_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/about_label" />
   <Button
      android:id="@+id/gen_error_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/gen_error_label" />
   <Button
      android:id="@+id/sudoku_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/sudoku_label" />
   <Button
      android:id="@+id/quit_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/quit_label" />
</LinearLayout>
