<?xml version="1.0" encoding="utf-8"?>
<!--
 ! Excerpted from "Hello, Android",
 ! published by The Pragmatic Bookshelf.
 ! Copyrights apply to this code. It may not be used to create training material, 
 ! courses, books, articles, and the like. Contact us if you are in doubt.
 ! We make no guarantees that this code is fit for any purpose. 
 ! Visit http://www.pragmaticprogrammer.com/titles/eband3 for more book information.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dip"
    android:background="@color/two_player_wordgame_background" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >
        
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >
                
                <TextView
                    android:id="@+id/two_player_wordgame_currround"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/two_player_wordgame_currround" />
                
                <TextView
                    android:id="@+id/two_player_wordgame_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/two_player_wordgame_time" />
                
                <TextView
                    android:id="@+id/two_player_wordgame_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/two_player_wordgame_score" />
            </LinearLayout>
            
            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="right" >
                <TableRow>
                    <TextView
                    android:id="@+id/two_player_wordgame_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_span="2"
                    android:textSize="15sp"
                    android:text="@string/two_player_wordgame_score" />
                </TableRow>
                <TableRow >
                    <TextView
                    android:id="@+id/two_player_wordgame_player1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/two_player_wordgame_player1" />
                    
                    <TextView
                    android:id="@+id/two_player_wordgame_player2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/two_player_wordgame_player2" />
                    
                </TableRow>
                <TableRow >
                    <TextView
                    android:id="@+id/two_player_wordgame_p1_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/two_player_wordgame_p1_score" />
                    <TextView
                    android:id="@+id/two_player_wordgame_p2_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/two_player_wordgame_p2_score" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
        
        <edu.neu.madcourse.dushyantdeshmukh.two_player_wordgame.BoardView 
            android:id="@+id/two_player_wordgame_board_view"
            android:layout_width="270dp"
            android:layout_height="350dp"
            android:layout_gravity="center" />
        
        
                <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
                
              
                <Button
            android:id="@+id/two_player_wordgame_currword_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="" />
                
                <Button
            android:id="@+id/two_player_wordgame_pause_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/two_player_wordgame_pause" />

        
        <Button
            android:id="@+id/two_player_wordgame_quit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/two_player_wordgame_quit" />
                </LinearLayout>

    </LinearLayout>

</ScrollView>